# modern-stanford-agents-base

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_PROCESS.md  TJARK_SETUP.md  main.py  pyproject.toml
.junie/: guidelines.md
docs/plan/: issue-59-django-security-plan.md  restructure-plan.md  restructure-to-src-layout.md
environment/frontend_server/: global_methods.py
environment/frontend_server/frontend_server/: urls.py  utils.py
environment/frontend_server/frontend_server/settings/: __init__.py  base.py  local.py
environment/frontend_server/temp_storage/: curr_sim_code.json
environment/frontend_server/templates/demo/: demo.html  main_script.html
environment/frontend_server/templates/home/: error_start_backend.html  home.html  main_script.html  main_script_old_dolores.html
environment/frontend_server/templates/landing/: landing.html
environment/frontend_server/templates/path_tester/: main_script.html  path_tester.html
environment/frontend_server/templates/persona_state/: persona_state.html
environment/frontend_server/translator/: admin.py  validation.py  views.py
reverie/backend_server/: config.py  reverie.py  test.py  utils.py
reverie/backend_server/persona/prompt_template/: gpt_structure.py
src/generative_agents/: __init__.py  compress.py
src/generative_agents/backend/: __init__.py  config.py  global_methods.py  maze.py  path_finder.py  server.py  utils.py
src/generative_agents/backend/commands/: __init__.py  base.py  inspection.py  simulation.py  tools.py
src/generative_agents/backend/persona/: __init__.py  persona.py
src/generative_agents/backend/persona/cognitive_modules/: __init__.py  converse.py  execute.py  perceive.py  plan.py  reflect.py  retrieve.py
src/generative_agents/backend/persona/memory_structures/: __init__.py  associative_memory.py  scratch.py  spatial_memory.py
src/generative_agents/backend/persona/prompt_template/: __init__.py  gpt_structure.py  print_prompt.py  run_gpt_prompt.py
tests/: test_commands.py  test_integration.py  test_model_config.py  test_validation.py
