[project]
name = "modern-stanford-agents-base"
version = "0.1.15"
description = "Generative Agents: Interactive Simulacra of Human Behavior - Modernized for Python 3.14.1+"
readme = "README.md"
requires-python = ">=3.14.1"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "django-storages>=1.14.6",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "selenium>=4.38.0",
]

[project.scripts]
generative-agents = "generative_agents.backend.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generative_agents"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "sourcery>=1.41.1",
    "ty>=0.0.1a32",
]
