[project]
name = "modern-stanford-agents-base"
version = "0.1.21"
description = "Generative Agents: Interactive Simulacra of Human Behavior - Modernized for Python 3.14"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "python-dotenv>=1.2.1",
    "selenium>=4.38.0",
]

[project.scripts]
generative-agents = "generative_agents.backend.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generative_agents"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "sourcery>=1.41.1",
    "ty>=0.0.1a32",
    "vulture>=2.14",
]

[tool.vulture]
min_confidence = 80
exclude = [
    "*/migrations/*",
    "*/settings/*",
]
ignore_names = [
    # TypedDict fields (used dynamically)
    "game_object",
    "spawning_location",
    "collision",
    "events",
    # Public API methods used in tests or intended for external use
    "get_model_for_task",
    "to_dict",
    # Scratch accessor methods (public API for persona introspection)
    "get_str_*",
    "get_curr_*",
    "act_*",
    # Module-level config exports
    "MODEL_*",
]
